--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -93,6 +93,7 @@ li {
     --fs-post-title: var(--fs-500);
     --fs-article-title: var(--fs-700);
     --fs-tag: 1.125rem;
+    --fs-footer: var(--fs-300);
 
     --fw-200: 200;
     --fw-300: 300;
@@ -106,11 +107,13 @@ li {
     --hero-spacing: 3rem;
     --section-spacing: 7rem;
     --links-section-spacing: 2rem;
+    --links-spacing: 1.5rem;
     --article-spacing: 3rem;
     --post-spacing: 2rem;
     --flow: 2rem;
     --post-flow: 0.5rem;
     --p-max-width: 100%;
+    --margin-spacing: 0.5em;
 
 }
 
@@ -261,7 +264,7 @@ small {
 }
 
 .page {
-    padding: var(--article-spacing) 0;
+    padding-block: var(--article-spacing);
 }
 
 .page__title {
@@ -270,15 +273,15 @@ small {
 }
 
 .posts {
-    padding: var(--section-spacing) 0;
+    padding-block: var(--section-spacing);
 }
 
 .post {
-    padding: var(--article-spacing) 0;
+    padding-block: var(--article-spacing);
 }
 
 .post__summary {
-    margin: 1em 0;
+    margin-block: 1em;
 }
 
 .flow>*+* {
@@ -308,7 +311,7 @@ small {
 }
 
 .links__text {
-    margin: 1em 0;
+    margin-block: var(--margin-spacing);
 }
 
 .link {
@@ -319,7 +322,7 @@ small {
     font-size: var(--fs-post-title);
     text-wrap: nowrap;
     margin-right: 1.5em;
-
+    å
 }
 
 .tag {
@@ -334,6 +337,7 @@ small {
 
 footer {
     padding: var(--article-spacing) 0;
+    font-size: var(--fs-footer);
 }
 
 .footer__left {
@@ -362,6 +366,14 @@ footer {
 
     }
 
+    .tags-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 1em;
+        padding-block: 1em;
+    }
+
 }
 
 @media (width > 800px) {
@@ -370,7 +382,6 @@ footer {
         justify-content: space-between;
         gap: 3em;
     }
-
 
     .tags-container {
         display: flex;
